--- a/css/adminStyle.css
+++ b/css/adminStyle.css
@@ -26,12 +26,22 @@ button:hover{
 	cursor: pointer;
 	border: 1px solid #222023;
 }
+input{
+	padding-right: 20px;
+	padding-left: 20px;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	font-size: 16px;
+	font-weight: lighter;
+	border-radius: 5px;
+	border: 1px solid #222023;
+}
 .adminLogout{
 	float: right;
 	margin-right: 230px;
 	margin-top: 25px;
 }
-.center{
+#center{
 	clear: right;
 	margin: 0 auto;
 	margin-top: 120px;
@@ -72,4 +82,18 @@ select option{
 	background-color: #222023;
 	color: #fff;
 	cursor: pointer;
+}
+ #studentForm{
+ 	clear: right;
+	margin: 0 auto;
+	margin-top: -300px;
+	text-align: center;
+ 	visibility: hidden;
+}
+#studentForm input{
+	margin-top: 10px;
+	width: 500px;
+}
+#studentForm button{
+	margin-top: 25px;
 }
